Thu Oct 26 15:12:12 2006  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/digest/digest.c (Init_digest): typo.

Wed Oct 25 17:16:05 2006  Akinori MUSHA  <knu@iDaemons.org>

	* test/digest/test_digest_hmac.rb: added.

Wed Oct 25 16:34:31 2006  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/test.sh: make this script work again.

Wed Oct 25 07:59:42 2006  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb: updated based on date2 3.9.6.
	  [ruby-core:09323]

Wed Oct 25 00:58:19 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/mkexports.rb, win32/resource.rb: use unique variable names.

Tue Oct 24 19:18:53 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enumerator.c (enumerator_by_slice): new method added.

	* enumerator.c (enumerator_by_cons): ditto.

Tue Oct 24 18:56:13 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enumerator.c (enum_each_slice, enum_each_cons): returns
	  Enumerable::Enumerator if no block is given.  [ruby-dev:29246]

	* enumerator.c: remove methods: enum_with_index, enum_slice,
	  enum_cons.  [ruby-dev:29246]

Tue Oct 24 18:51:27 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (enum_zip): add RETURN_ENUMERATOR() to zip method.

Mon Oct 23 04:30:04 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c (r_object0): use return value from proc given as the
	  second argument to Marshal#load() to allow value replacement in
	  the restoring data.

Sun Oct 22 14:48:31 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* signal.c (Init_signal): avoid duplicated installation of SIGCHLD
	  handler.

Sun Oct 22 16:47:56 2006  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_substr): should be infected with only original
	  string, but not the shared string.  fixed: [ruby-core:09152]

	* strnig.c (rb_str_new4): keep shared string untainted when orignal
	  string is tainted.  fixed: [ruby-dev:29672]

Sun Oct 22 07:55:11 2006  Yukihiro Matsumoto  <matz@ruby-lang.org>
